--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
       /* Karten-Layout: immer echte Quadrate unabhängig vom Text */
       .day { position: relative; border-radius: 1rem; overflow: hidden; }
       .square { position: relative; width: 100%; padding-top: 100%; } /* 1:1-Quadrat */
-      .content { position: absolute; inset: 0; display:flex; align-items:center; justify-content:center; padding: 10px; }
+      .content { position: absolute; inset: 0; display:flex; align-items:center; justify-content:center; padding: 12px; }
       .label{
-        font-weight:600; text-align:center; line-height:1.15; opacity:1;
-        /* Lesbarkeit: keine Trennstriche, aber weiche Umbrüche erlaubt */
-        word-break: normal; overflow-wrap: anywhere; hyphens: none;
-        /* Startgröße – wird per JS automatisch verkleinert falls nötig */
-        font-size:16px; max-width:90%;
+        display:block; /* vermeidet Inline-Clipping */
+        padding:2px 6px; /* Abstand zu runden Ecken */
+        font-weight:600; text-align:center; line-height:1.2; opacity:1;
+        white-space:normal; word-break: normal; overflow-wrap: break-word; hyphens: none;
+        text-wrap: balance; /* Safari/iOS unterstützt das */
+        font-size:16px; max-width:92%;
       }
       .check-wrap { position:absolute; inset:0; display:none; align-items:center; justify-content:center; z-index:1; pointer-events:none; }
       .day.checked .check-wrap { display:flex; }
-      .day.checked .label { opacity: 1; } /* Text bleibt voll sichtbar */
+      .day.checked .label { opacity: .35; } /* Text bleibt voll sichtbar */
     </style>
   </head>
   <body class="min-h-screen w-full bg-gradient text-slate-100 p-6">
@@ -127,22 +128,23 @@
         $$('.day .content').forEach(box => {
           const label = box.querySelector('.label');
           if (!label) return;
-          // Basiswerte
-          let size = 16; // entspricht CSS-Startgröße
-          const min = 10, max = 18;
+          // Startwerte
+          let size = 16; const min = 10; const max = 18;
           label.style.fontSize = size + 'px';
-          label.style.lineHeight = '1.12';
+          label.style.lineHeight = '1.2';
 
-          // Platz innerhalb des Quadrats (mit kleinem Puffer)
-          const maxH = box.clientHeight - 6;
-          // Solange verkleinern, bis der Text vollständig reinpasst
-          while (label.scrollHeight > maxH && size > min) {
+          const pad = 12; // wie .content padding
+          const maxH = box.clientHeight - pad - 2; // Sicherheitsabstand
+          const maxW = box.clientWidth  - pad - 2;
+
+          // Reduziere, bis Höhe UND Breite passen
+          while ((label.scrollHeight > maxH || label.scrollWidth > maxW) && size > min) {
             size -= 1;
             label.style.fontSize = size + 'px';
           }
-          // Falls sehr kurzer Text – sanft nach oben deckeln
-          if (label.scrollHeight <= maxH && size < max) {
-            // optional leicht vergrößern – hier bewusst nicht auto-aufblasen
+          // Kleiner Sicherheitsabschlag gegen Pixel-Rundung, falls wir am Limit sind
+          if (label.scrollHeight > maxH || label.scrollWidth > maxW) {
+            label.style.fontSize = (size - 0.5) + 'px';
           }
         });
       }
