--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         "Mit allem drum und dran", "Kannste nüscht sagen", "Ganz Perfekt", "Wenn uns der Spaß verlässt",
         "Da gibts gar keine Probleme", "Den kenn ich gut", "Da hab ich Antennenmäßig schon mal was gemacht", "Viel trinken sagt mein Arzt immer",
         "Ich sag dazu nüscht, ABER", "Muss jeder selber wissen", "Die machen schon ihr Ding", "Man muss auch mal mit den Leuten reden",
-        "Sagt Waschi doch", "Im Boulevardtheater kannste dir die Gatränke gleich für die Pause bestellen", "Wir fahren immer bissl eher los, falls mal was ist", "Achiem macht das"
+        "Mensch Jürgen", "Im Boulevardtheater kannste dir die Gatränke gleich für die Pause bestellen", "Wir fahren immer bissl eher los, falls mal was ist", "Achiem macht das"
       ];
 
       let theme=localStorage.getItem('theme')||'dark';
@@ -249,3 +249,4 @@
     </script>
   </body>
 </html>
+
