--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bingo</title>
+    <title>Bingo</title>
+
+    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png"> <!-- 👈 wichtig für iPhone -->
+    <meta name="theme-color" content="#0f172a">
+
+    <!-- optional, damit es wie eine echte App aussieht -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       .bar { transition: width 700ms cubic-bezier(.2,.8,.2,1); }
@@ -249,4 +260,5 @@
     </script>
   </body>
 </html>
+
 
