--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         "Mit allem drum und dran", "Kannste nüscht sagen", "Ganz Perfekt", "Wenn uns der Spaß verlässt",
         "Da gibts gar keine Probleme", "Den kenn ich gut", "Da hab ich Antennenmäßig schon mal was gemacht", "Viel trinken sagt mein Arzt immer",
         "Ich sag dazu nüscht, ABER", "Muss jeder selber wissen", "Die machen schon ihr Ding", "Man muss auch mal mit den Leuten reden",
-        "Mensch Jürgen", "Ich brauch kein Buch, ich hab schon eins", "Wir fahren immer bissl eher los, falls mal was ist", "Achiem macht das"
+        "Mensch Jürgen", "Ich brauch kein Buch, ich hab schon eins", "Wir fahren immer bissl eher los, falls mal was ist", "Achim macht das"
       ];
 
       let theme=localStorage.getItem('theme')||'dark';
@@ -263,6 +263,7 @@
     </script>
   </body>
 </html>
+
 
 
 
